syntax = "proto3";

package com.bni.orange.authentication.proto;

option java_package = "com.bni.orange.authentication.proto";
option java_multiple_files = true;

message UserRegisteredEvent {
  string user_id = 1;
  string phone_number = 2;
  string name = 3;
  int64 registered_at = 4;
}
